# llm-srl-api

./: .env.example  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py
app/srl/: __init__.py  analyzer.py  api.py  models.py
res/: form-mapping.json  groupped_examples.json  role-mapping.json
tests/: conftest.py  test_srl.py
