[tool.poetry]
name = "llm-srl-api"
version = "0.1.0"
description = "FastAPI service with Rich logging"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
rich = "^13.7.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
spacy = "^3.7.4"
ru-core-news-lg = {url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_lg-3.7.0/ru_core_news_lg-3.7.0-py3-none-any.whl"}
openai = "^1.14.0"
pydantic = "^2.6.4"
typing-extensions = "^4.10.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-watch = "^4.2.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S" 